# file_service

./: .env  .gitignore  README.md  config.py  file_sharing.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ee00c4cf7453_nitial_tables.py  eeb8fc514ab3_initial_tables.py
database/: dependencies.py
db/: database.py
src/: main.py  services.py
src/db/: dependencies.py
src/files/: models.py  routers.py  schemas.py
src/pages/: routes.py
src/pages/templates/: base.html
src/pages/templates/auth/: login.html  register.html
src/pages/templates/file_manager/: file_manager.html
src/pages/templates/layout/: _footer.html  _header.html  _navbar.html
src/static/: styles.css
src/static/js/: download.js
src/templates/: base.html  files.html  upload.html
src/templates/auth/: login.html  register.html
src/templates/file_manager/: file_manager.html
src/user/: manager.py  models.py  routers.py  schemas.py  utils.py
src/users/: auth.py  manager.py  models.py  routes.py  utils.py
